updates in views - pta

--- a/ESchoolOffice/templates/pta/PTADesignation.html
+++ b/ESchoolOffice/templates/pta/PTADesignation.html
@@ -11,6 +11,7 @@
 </head>
 <body id="top">
 
+
 	<div class="container">
   <h2>PTA Committee</h2>
 
@@ -32,7 +33,7 @@
                         </div>
 
                         <div class="col-md-6 bg-warning">
-                        ww
+                            {{form.pta_designation_name}}
                         </div>
 
                     </div>
