--- a/ESchoolOffice/templates/student/Parent.html
+++ b/ESchoolOffice/templates/student/Parent.html
@@ -1,232 +1,243 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
-<html lang="">
+    <html lang="">
 
-<head>
-<title>Parent</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body id="top">
+    <head>
+        <title>Parent</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    </head>
+    <body id="top">
+<div class="container">
+        <div>
+          <h2>Parent</h2>
+      </div>
 
-    <div class="container">
-  <h2>Parent</h2>
-
-  <div class="row">
-   <div class="col-md-12">
-
-    <div class="card table-bordered table-student">
+      <div class="row">
+         <div class="col-md-6">
+            <div class="card table-bordered table-student">
                 <div class="card-header">
-                    Parent
+                    Father Details
                 </div>
                 <div class="card-body">
                     <div class="row card-body2">
-                        
-                        <div class="col-md-2 text-right">
-                            Student Name: 
+
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning">
-                        ff
+                        <div class="col-md-3 text-right">
+                            Name:
                         </div>
-
-                        <div class="col-md-2 text-right" style="margin-left: -40px;">
-                            Guardian Name: 
-                        </div>
-
-                        <div class="col-md-4 bg-warning" style="">
-                        ff
+                        <div class="col-md-6 bg-warning">
+                            vdf
                         </div>
                     </div>
-
-                    <div class="row card-body2">
-                        
-                        <div class="col-md-2 text-right">
-                            Relationship with Guardian: 
-                        </div>
-
-                        <div class="col-md-4 bg-warning">
-                        ff
-                        </div>
-
-                        <div class="col-md-2 text-right" style="margin-left: -40px;">
-                            Guardian Name: 
-                        </div>
-
-                        <div class="col-md-4 bg-warning" style="">
-                        ff
-                        </div>
-                    </div>
-
                     <div class="row card-body2">
 
-                        <div class="col-md-2 text-right col-formargin">
-                            Registration Date: 
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning">
-                        ww
+                        <div class="col-md-3 text-right">
+                            Pernanent Address:
                         </div>
-                    </div>
-
-                    <div class="row card-body2">
-                        
-
-                        <div class="col-md-2 text-right col-formargin">
-                            Name: 
-                        </div>
-
-                        <div class="col-md-4 bg-warning">
-                        ww
-                        </div>
-
-                        <div class="col-md-2 text-right">
-                        Gender
-                        </div>
-
-                        <div class="col-md-3 bg-warning">
-                        ww
+                        <div class="col-md-6 bg-warning">
+                            vdf
                         </div>
                     </div>
-                    
-                    <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            Address: 
-                        </div>
-
-                        <div class="col-md-4 bg-warning">
-                        ww
-                        </div>
-
-                        <div class="col-md-2 text-right">
-                            Date of Birth: 
-                        </div>
-
-                         <div class="col-md-3 bg-warning">
-                        ww
-                        </div>
-                    </div>
-
-                    <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            Email: 
-                        </div>
-
-                        <div class="col-md-4 bg-warning">
-                        ww
-                        </div>
-
-                        <div class="col-md-2 text-right">
-                            Blood Group: 
-                        </div>
-
-                        <div class="col-md-3 bg-warning">
-                        ss
-                        </div>
-                    </div>
-
                     <div class="row card-body2">
 
-                        <div class="col-md-2 text-right col-formargin">
-                            Aadhaar No.: 
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning">
-                        ww
+                        <div class="col-md-3 text-right">
+                            Communication Address:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
                         </div>
                     </div>
-
                     <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            Religion: 
+
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning ">
-                        ww
+                        <div class="col-md-3 text-right">
+                            Contact No:
                         </div>
-
-                        <div class="col-md-2 text-right">
-                            Caste: 
-                        </div>
-
-                        <div class="col-md-3 bg-warning">
-                        ww
+                        <div class="col-md-6 bg-warning">
+                            vdf
                         </div>
                     </div>
-
                     <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            Which class admission is taken: 
+
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning">
-                        ww
+                        <div class="col-md-3 text-right">
+                            Email:
                         </div>
-
-                        <div class="col-md-2 text-right">
-                             
-                        </div>
-
-                        <div class="col-md-3 bg-warning">
-                        
+                        <div class="col-md-6 bg-warning">
+                            vdf
                         </div>
                     </div>
-
                     <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            Nationality: 
+
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning">
-                        ww
-                        </div>   
+                        <div class="col-md-3 text-right">
+                            Aadhaar:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
                     </div>
-
                     <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            State: 
+
+                        <div class="col-md-1">
                         </div>
 
-                        <div class="col-md-4 bg-warning">
-                        ww
-                        </div>   
-                    </div>   
-
-                     <div class="row card-body2">
-                        <div class="col-md-2 text-right col-formargin">
-                            Mother tongue: 
+                        <div class="col-md-3 text-right">
+                            Occupation:
                         </div>
-
-                        <div class="col-md-4 bg-warning">
-                        ww
-                        </div>   
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
                     </div>
 
-                     <div class="row btn-div">
-                        <div class="col-md-4 card-body2">
-                        </div>
-                        <div class="col-md-4">
-                        
-                        <button class="btn btn-primary btn-btn">
-                            Reset
-                        </button>
-                        </div>
-                        
-                        <div class="col-md-4">
-                        <button class="btn btn-success btn-btn btn-save" onclick="return confirm('Are you sure you want to save this Staff Registration');">
-                            Save
-                        </button>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-md-6">
+
+            <div class="card table-bordered table-student">
+                <div class="card-header">
+                    Mother Details
+                </div>
+                <div class="card-body">
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
                         </div>
 
+                        <div class="col-md-3 text-right">
+                            Name:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
                     </div>
-                 </div>
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
+                        </div>
+
+                        <div class="col-md-3 text-right">
+                            Pernanent Address:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
+                    </div>
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
+                        </div>
+
+                        <div class="col-md-3 text-right">
+                            Communication Address:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
+                    </div>
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
+                        </div>
+
+                        <div class="col-md-3 text-right">
+                            Contact No:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
+                    </div>
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
+                        </div>
+
+                        <div class="col-md-3 text-right">
+                            Email:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
+                    </div>
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
+                        </div>
+
+                        <div class="col-md-3 text-right">
+                            Aadhaar:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
+                    </div>
+                    <div class="row card-body2">
+
+                        <div class="col-md-1">
+                        </div>
+
+                        <div class="col-md-3 text-right">
+                            Occupation:
+                        </div>
+                        <div class="col-md-6 bg-warning">
+                            vdf
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+        </div>
+
+
     </div>
+      <div class="row" style="margin-top: 50px;">
+        <div class="col-md-12">
+                        <div class="col-md-3">
+                        </div>
+                        <div class="col-md-2 text-right">
 
-   </div>
-</div>
+                            <button class="btn btn-primary btn-btn">
+                                Reset
+                            </button>
+                        </div>
+                        <div class="col-md-2">
+                        </div>
 
+                        <div class="col-md-2 text-left">
+                            <button class="btn btn-success btn-btn" onclick="return confirm('Are you sure you want to activate this Academic Year');">
+                                Save
+                            </button>
+                        </div>
+
+                        <div class="col-md-3">
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
 
 </body>
 </html>
