--- a/ESchoolOffice/templates/asset/Asset.html
+++ b/ESchoolOffice/templates/asset/Asset.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body id="top">
+<form method="post">
+    {% csrf_token %}
 
 <div class="container">
   <h2>Asset</h2>
@@ -30,7 +32,7 @@
                            Asset Name: 
                         </div>
                         <div class="col-md-6 bg-warning">
-                        vdf
+                            {{form.asset_name}}
                         </div>
                     </div>
 
@@ -42,6 +44,7 @@
                             Description: 
                         </div>
                         <div class="col-md-6">
+                            {{form.asset_description}}
                         </div>
                     </div>
                     <div class="row">
@@ -69,8 +72,7 @@
             </div>
     </div>
 </div>
-</div>
-
+</form>
 
 </body>
 </html>
