Wrote Merchant.html, added inset for merchant in views.py

--- a/ESchoolOffice/templates/asset/Asset.html
+++ b/ESchoolOffice/templates/asset/Asset.html
@@ -31,7 +31,7 @@
                         <div class="col-md-3 text-right">
                            Asset Name: 
                         </div>
-                        <div class="col-md-6 bg-warning">
+                        <div class="col-md-6">
                             {{form.asset_name}}
                         </div>
                     </div>
