Created index page for Asset apps. created function index in asset- veiws.py. included the url of index page in asset urls.py

--- a/ESchoolOffice/templates/asset/index.html
+++ b/ESchoolOffice/templates/asset/index.html
@@ -11,10 +11,9 @@
 <div class="row mt-4" >
     <div class="col-md-1"></div>
     <div class="col-md-5">
-        <a href="{% url 'asset.views.index' %}">
+        <a href="{% url 'asset:AssetForms' %}" >
         <button class="btn btn-success btn-lg">
             Asset
-
         </button></a>
     </div>
     <div class="col-md-5">
