Button click of merchant updated in index page of asset

--- a/ESchoolOffice/templates/asset/Merchant.html
+++ b/ESchoolOffice/templates/asset/Merchant.html
@@ -30,7 +30,7 @@
                         <div class="col-md-3 text-right">
                            Merchant Name: 
                         </div>
-                        <div class="col-md-6 bg-warning">
+                        <div class="col-md-6">
                             {{form.mer_name}}
                         </div>
                     </div>
