--- a/ESchoolOffice/templates/asset/index.html
+++ b/ESchoolOffice/templates/asset/index.html
@@ -17,9 +17,10 @@
         </button></a>
     </div>
     <div class="col-md-5">
+        <a href="{% url 'asset:MerchantForms' %}" >
         <button class="btn btn-primary btn-lg">
             Merchant
-        </button>
+        </button></a>
     </div>
     <div class="col-md-1"></div>
 </div>
