html files added

--- a/ESchoolOffice/templates/pta/PTACommiteeRegistrationForm.html
+++ b/ESchoolOffice/templates/pta/PTACommiteeRegistrationForm.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="reg_create" method="post">
+    {% csrf_token %}
+    <table>
+         {{ form.as_table }}
+    </table>
+    <input type="submit" value="Submit">
+</form>
 </body>
 </html>
