--- a/ESchoolOffice/templates/pta/PTADesignation.html
+++ b/ESchoolOffice/templates/pta/PTADesignation.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
     <body id="top">
-       <form action="create" method="post">
+       <form action="des_create" method="post">
         {% csrf_token %}
     <div class="container">
       <h2>PTA Committee</h2>
