--- a/ESchoolOffice/templates/student/Student.html
+++ b/ESchoolOffice/templates/student/Student.html
@@ -29,7 +29,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        
+                            {{form.stud_admno}}
                         </div>
                     </div>
 
@@ -40,19 +40,18 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                         {{form.stud_regdate}}
                         </div>
                     </div>
 
                     <div class="row card-body2">
-                        
 
                         <div class="col-md-2 text-right col-formargin">
                             Name: 
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.stud_name}}
                         </div>
 
                         <div class="col-md-2 text-right">
@@ -60,7 +59,7 @@
                         </div>
 
                         <div class="col-md-3 bg-warning">
-                        ww
+                        {{form.stud_gender}}
                         </div>
                     </div>
                     
@@ -70,7 +69,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.stud_address}}
                         </div>
 
                         <div class="col-md-2 text-right">
@@ -78,7 +77,7 @@
                         </div>
 
                          <div class="col-md-3 bg-warning">
-                        ww
+                        {{form.stud_dob}}
                         </div>
                     </div>
 
@@ -88,7 +87,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.stud_email}}
                         </div>
 
                         <div class="col-md-2 text-right">
@@ -96,7 +95,7 @@
                         </div>
 
                         <div class="col-md-3 bg-warning">
-                        ss
+                        {{form.stud_bloodgroup}}
                         </div>
                     </div>
 
@@ -107,7 +106,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.stud_adharno}}
                         </div>
                     </div>
 
@@ -117,7 +116,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning ">
-                        ww
+                        {{form.religion}}
                         </div>
 
                         <div class="col-md-2 text-right">
@@ -125,7 +124,7 @@
                         </div>
 
                         <div class="col-md-3 bg-warning">
-                        ww
+                        {{form.caste}}
                         </div>
                     </div>
 
@@ -135,7 +134,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.standard}}
                         </div>
 
                         <div class="col-md-2 text-right">
@@ -153,7 +152,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.stud_nationality}}
                         </div>   
                     </div>
 
@@ -163,7 +162,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.state}}
                         </div>   
                     </div>   
 
@@ -173,7 +172,7 @@
                         </div>
 
                         <div class="col-md-4 bg-warning">
-                        ww
+                        {{form.mothertongue}}
                         </div>   
                     </div>
 
