--- a/ESchoolOffice/templates/academic_settings/Index_Subject.html
+++ b/ESchoolOffice/templates/academic_settings/Index_Subject.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
+<a href="{% url 'addsubject' %}">Add Subject</a>
+
+
+
+<div>Exist</div>
+
+
+
+<div>Not</div>
+
+
+
+
+<table>
+    <thead></thead>
+    {% if subject_list %}
+    <tbody></tbody>
+    {% else %}
+    <tfoot>Not</tfoot>
+    {% endif %}
+</table>
 
 </body>
 </html>
