--- a/ESchoolOffice/project_static/CSS/style.css
+++ b/ESchoolOffice/project_static/CSS/style.css
@@ -78,3 +78,18 @@ div.well{
 .col-formargin{
   margin-left: 35px;
 }
+
+table, th, td {
+  border: 1px solid black;
+
+p
+{
+width =100
+height = 100px
+}
+
+.test
+{
+background-color:red;
+height:50px
+}
