merchant edit and delete in view. urls updated

--- a/ESchoolOffice/templates/asset/Merchant.html
+++ b/ESchoolOffice/templates/asset/Merchant.html
@@ -117,8 +117,9 @@
                 <td>{{obj.mer_address}}</td>
                 <td>{{obj.mer_contactno}}</td>
                 <td>{{obj.mer_email}}</td>
-                <td><a href="{% url 'asset:edit_merchant' pk=obj.id %}">Edit</a></td>
-                <td><a href="{% url 'asset:delete_merchant' pk=obj.id %}">Delete</a></td>
+                <td><a href="{% url 'asset:merchant_edit' pk=obj.id %}">Edit</a></td>
+                <td><a href="{% url 'asset:merchant_delete' pk=obj.id %}">Delete</a></td>
+<!--                <td><a href="/asset/merchant_delete/{{ merchant.id }}/">Delete </a></td>-->
             </tr>
             {% endfor %}
         </table>
