--- a/ESchoolOffice/templates/student/Student.html
+++ b/ESchoolOffice/templates/student/Student.html
@@ -10,8 +10,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body id="top">
-
-	<div class="container">
+<form method="post">
+    {% csrf_token %}
+    	<div class="container">
   <h2>Student</h2>
 
   <div class="row">
@@ -23,9 +24,9 @@
                 </div>
                 <div class="card-body">
                     <div class="row card-body2">
-                    	
+
                         <div class="col-md-2 text-right col-formargin">
-                            Admission No.: 
+                            Admission No.:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -36,7 +37,7 @@
                     <div class="row card-body2">
 
                         <div class="col-md-2 text-right col-formargin">
-                            Registration Date: 
+                            Registration Date:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -47,7 +48,7 @@
                     <div class="row card-body2">
 
                         <div class="col-md-2 text-right col-formargin">
-                            Name: 
+                            Name:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -62,10 +63,10 @@
                         {{form.stud_gender}}
                         </div>
                     </div>
-                    
+
                     <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            Address: 
+                            Address:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -73,7 +74,7 @@
                         </div>
 
                         <div class="col-md-2 text-right">
-                            Date of Birth: 
+                            Date of Birth:
                         </div>
 
                          <div class="col-md-3 bg-warning">
@@ -83,7 +84,7 @@
 
                     <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            Email: 
+                            Email:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -91,7 +92,7 @@
                         </div>
 
                         <div class="col-md-2 text-right">
-                            Blood Group: 
+                            Blood Group:
                         </div>
 
                         <div class="col-md-3 bg-warning">
@@ -102,7 +103,7 @@
                     <div class="row card-body2">
 
                         <div class="col-md-2 text-right col-formargin">
-                            Aadhaar No.: 
+                            Aadhaar No.:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -112,7 +113,7 @@
 
                     <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            Religion: 
+                            Religion:
                         </div>
 
                         <div class="col-md-4 bg-warning ">
@@ -120,7 +121,7 @@
                         </div>
 
                         <div class="col-md-2 text-right">
-                            Caste: 
+                            Caste:
                         </div>
 
                         <div class="col-md-3 bg-warning">
@@ -130,7 +131,7 @@
 
                     <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            Which class admission is taken: 
+                            Which class admission is taken:
                         </div>
 
                         <div class="col-md-4 bg-warning">
@@ -138,58 +139,60 @@
                         </div>
 
                         <div class="col-md-2 text-right">
-                             
+
                         </div>
 
                         <div class="col-md-3 bg-warning">
-                        
+
                         </div>
                     </div>
 
                     <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            Nationality: 
+                            Nationality:
                         </div>
 
                         <div class="col-md-4 bg-warning">
                         {{form.stud_nationality}}
-                        </div>   
+                        </div>
                     </div>
 
                     <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            State: 
+                            State:
                         </div>
 
                         <div class="col-md-4 bg-warning">
                         {{form.state}}
-                        </div>   
-                    </div>   
+                        </div>
+                    </div>
 
                      <div class="row card-body2">
                         <div class="col-md-2 text-right col-formargin">
-                            Mother tongue: 
+                            Mother tongue:
                         </div>
 
                         <div class="col-md-4 bg-warning">
                         {{form.mothertongue}}
-                        </div>   
+                        </div>
                     </div>
 
                      <div class="row btn-div">
                         <div class="col-md-4 card-body2">
                         </div>
                         <div class="col-md-4">
-                        
+
                         <button class="btn btn-primary btn-btn">
                             Reset
                         </button>
                         </div>
-                        
+                    {{ form.errors }}
+                    {{ form.non_field_errors }}
                         <div class="col-md-4">
-                        <button class="btn btn-success btn-btn btn-save" onclick="return confirm('Are you sure you want to save this Staff Registration');">
-                            Save
-                        </button>
+<!--                        <button class="btn btn-success btn-btn btn-save" onclick="return confirm('Are you sure you want to save this Staff Registration');">-->
+<!--                            Save-->
+<!--                        </button>-->
+                            <input type="submit" value="Submit"/>
                         </div>
 
                     </div>
@@ -198,6 +201,8 @@
 
    </div>
 </div>
+</form>
+
 
 
 </body>
