--- a/ESchoolOffice/templates/academic_settings/Add_Standard.html
+++ b/ESchoolOffice/templates/academic_settings/Add_Standard.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="">
+
 <head>
-<title>Subject</title>
+<title>Class</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
@@ -9,15 +11,11 @@
 </head>
 <body id="top">
 
-
-
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
 </form>
-
-
 
 </body>
 </html>
