model changed- assetmanagement in- datefield changed default date to today. Forms- text area widget added, datefield added

--- a/ESchoolOffice/templates/asset/index.html
+++ b/ESchoolOffice/templates/asset/index.html
@@ -22,6 +22,15 @@
             Merchant
         </button></a>
     </div>
+</div>
+<div class="row mt-4" >
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
+        <a href="{% url 'asset:AssetManagementInForms' %}" >
+        <button class="btn btn-primary btn-lg">
+            Asset->>Inward
+        </button></a>
+    </div>
     <div class="col-md-1"></div>
 </div>
 </body>
