--- a/ESchoolOffice/templates/asset/AssetManagementIn.html
+++ b/ESchoolOffice/templates/asset/AssetManagementIn.html
@@ -12,11 +12,13 @@
          
 
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
            
         </head>
-<body id="top">
+        <body id="top">
+        <form method="post">
+            {% csrf_token %}
             <div class="container">
                 <div>
                   <h2>Asset Management In
@@ -32,114 +34,115 @@
                     <div class="card-body">
                         <div class="row card-body2">
 
-                            <div class="col-md-1"></div>    
+                            <div class="col-md-1"></div>
                             <div class="col-md-2 text-right">
-                                Date: 
+                                Date:
                             </div>
                             <div class="col-md-2 bg-warning">
-                                vdf
+                                {{form.assetmgmtin_date}}
                             </div>
                             <div class="col-md-1"></div>
                             <div class="col-md-2 text-right">
                                 Merchant:
                             </div>
                             <div class="col-md-2 bg-warning">
-                                vdf
+                                {{form.merchant}}
                             </div>
                         </div>
                         <div class="row card-body2">
 
-                            <div class="col-md-1"></div> 
+                            <div class="col-md-1"></div>
                             <div class="col-md-2 text-right">
-                                Bill No: 
+                                Bill No:
                             </div>
                             <div class="col-md-2 bg-warning">
-                                vdf
+                                {{form.assetmgmtin_billno}}
                             </div>
                             <div class="col-md-1"></div>
                             <div class="col-md-2 text-right">
-                                Bill Date:
+                                Bill Amount:
                             </div>
                             <div class="col-md-2 bg-warning">
-                                vdf
+                                {{form.assetmgmtin_billamount}}
                             </div>
                         </div>
 
 
                     </div>
 
-                    <div class="row">
-                       <div class="col-md-8">
-                        <div class="card table-bordered table-student">
-                         <div class="card-body">
-                            <div class="row card-body2">
 
-                                <div class="col-md-1"></div>    
-                                <div class="col-md-2 text-right">
-                                    Asset: 
-                                </div>
-                                <div class="col-md-2 bg-warning">
-                                    vdf
-                                </div>
-                                <div class="col-md-1"></div>
-                                <div class="col-md-2 text-right">
-                                    Quantity:
-                                </div>
-                                <div class="col-md-1 bg-warning">
-                                    vdf
-                                </div>
-                                <div class="col-md-1">
-                                    <button class="btn btn-secondary btn-sm">Add+</button>
-                                </div>
-                            </div>
-                            <div class="row card-body2">
+<!--                    <div class="row">-->
+<!--                       <div class="col-md-8">-->
+<!--                        <div class="card table-bordered table-student">-->
+<!--                         <div class="card-body">-->
+<!--                            <div class="row card-body2">-->
 
-                                <div class="col-md-1"></div> 
-                                <div class="col-md-2 text-right">
-                                    Rate: 
-                                </div>
-                                <div class="col-md-2 bg-warning">
-                                    vdf
-                                </div>
+<!--                                <div class="col-md-1"></div>    -->
+<!--                                <div class="col-md-2 text-right">-->
+<!--                                    Asset: -->
+<!--                                </div>-->
+<!--                                <div class="col-md-2 bg-warning">-->
+<!--                                    {{asset}}-->
+<!--                                </div>-->
+<!--                                <div class="col-md-1"></div>-->
+<!--                                <div class="col-md-2 text-right">-->
+<!--                                    Quantity:-->
+<!--                                </div>-->
+<!--                                <div class="col-md-1 bg-warning">-->
+<!--                                    vdf-->
+<!--                                </div>-->
+<!--                                <div class="col-md-1">-->
+<!--                                    <button class="btn btn-secondary btn-sm">Add+</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="row card-body2">-->
 
-                            </div>
+<!--                                <div class="col-md-1"></div> -->
+<!--                                <div class="col-md-2 text-right">-->
+<!--                                    Rate: -->
+<!--                                </div>-->
+<!--                                <div class="col-md-2 bg-warning">-->
+<!--                                    vdf-->
+<!--                                </div>-->
 
-                            <div class="row">
-                                <table width="100%" class="table-bordered">
-                                    <thead>
-                                        <th class="text-center">Asset</th>
-                                        <th class="text-center">Quantity</th>
-                                        <th class="text-center">Asset</th>
-                                        <th class="text-center">Remarks</th>
+<!--                            </div>-->
 
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td class="text-right"></td>
-                                            <td ></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
+<!--                            <div class="row">-->
+<!--                                <table width="100%" class="table-bordered">-->
+<!--                                    <thead>-->
+<!--                                        <th class="text-center">Asset</th>-->
+<!--                                        <th class="text-center">Quantity</th>-->
+<!--                                        <th class="text-center">Asset</th>-->
+<!--                                        <th class="text-center">Remarks</th>-->
 
-                                    </tbody>
+<!--                                    </thead>-->
+<!--                                    <tbody>-->
+<!--                                        <tr>-->
+<!--                                            <td class="text-right"></td>-->
+<!--                                            <td ></td>-->
+<!--                                            <td></td>-->
+<!--                                            <td></td>-->
+<!--                                        </tr>-->
 
-                                </table>
+<!--                                    </tbody>-->
 
-                            </div>
+<!--                                </table>-->
+
+<!--                            </div>-->
 
 
-                        </div> 
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card table-bordered table-student">
-                        <div class="card-header">
-                            Asset List
-                        </div>
+<!--                        </div> -->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-4">-->
+<!--                    <div class="card table-bordered table-student">-->
+<!--                        <div class="card-header">-->
+<!--                            Asset List-->
+<!--                        </div>-->
 
-                    </div>
-                </div>
-            </div>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
 
     </div>
@@ -150,32 +153,35 @@
 
 
 
-<div class="row" style="margin-top: 50px;">
-  
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-2 text-right">
+        <div class="row" style="margin-top: 50px;">
 
-            <button class="btn btn-primary btn-btn">
-                Reset
-            </button>
-        </div>
-        <div class="col-md-2">   
-        </div>
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-2 text-right">
 
-        <div class="col-md-2 text-left">
-            <button class="btn btn-success btn-btn" onclick="return confirm('Are you sure you want to activate this Academic Year');">
-                Submit
-            </button>
-        </div>
+                    <button class="btn btn-primary btn-btn">
+                        Reset
+                    </button>
+                </div>
+                <div class="col-md-2">
+                </div>
 
-        <div class="col-md-3"> 
-        </div>
+                <div class="col-md-2 text-left">
+                    <button class="btn btn-success btn-btn" onclick="return confirm('Are you sure you want to activate this Academic Year');">
+                        Submit
+                    </button>
+                </div>
+
+                <div class="col-md-3">
+                </div>
 
 
-  
-</div>
-</div>
 
-</body></html>
+         </div>
+
+                </div>
+
+        </form>
+    </body>
+        </html>
 
