--- a/ESchoolOffice/templates/user_settings/Caste.html
+++ b/ESchoolOffice/templates/user_settings/Caste.html
@@ -10,71 +10,57 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body id="top">
-
+<form method="post">
+ {% csrf_token %}
 <div class="container">
   <h2>Caste</h2>
 
   <div class="row">
    <div class="col-md-12">
             <div class="card table-bordered">
-                <div class="card-header">
+
+                    <div class="card-header">
                     Create New Caste
                 </div>
                 <div class="card-body">
+
                     <div class="row card-body2">
 
                         <div class="col-md-1">
                         </div>
 
                         <div class="col-md-3 text-right">
-                           Religion Name: 
+                           Religion:
                         </div>
                         <div class="col-md-6 bg-warning">
-                        vdf
+                            {{ form.religion }}
                         </div>
                     </div>
-                </div>
-                <div class="card-body">
-                    <div class="row">
+
+                    <div class="row card-body2">
 
                         <div class="col-md-1">
                         </div>
 
                         <div class="col-md-3 text-right">
-                           Caste: 
+                           Caste Name:
                         </div>
                         <div class="col-md-6 bg-warning">
-                        vdf
+                            {{ form.caste_name }}
                         </div>
                     </div>
-                </div>
-                <div class="card-body">
-                    <div class="row ">
-
-                        <div class="col-md-1">
-                        </div>
-
-                        <div class="col-md-3">   
-                        </div>
-                        <div class="col-md-6 text-center">
-                            <button class="btn btn-warning btn-btn">
-                            Add+
-                        </button>
-                        </div>
-                    </div>
-                </div>
 
                     <div class="row">
                         <div class="col-md-4 card-body2">
                         </div>
                         <div class="col-md-4">
-                        
+
                         <button class="btn btn-primary btn-btn">
                             Reset
                         </button>
                         </div>
-                        
-                        <div class="col-md-4 card-body2">
+
+                        <div class="col-md-4">
                         <button class="btn btn-success btn-btn">
                             Save
                         </button>
@@ -84,13 +70,36 @@
                     </div>
 
 
+
                     </div>
+
                 </div>
             </div>
     </div>
 </div>
-</div>
-
+       <div class="container">
+    <div>
+        <table border="1">
+            <tr>
+                <th>Sl No</th>
+                <th>Religion</th>
+                <th>Caste name</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+            {% for obj in data %}
+            <tr>
+                <td>{{forloop.counter}}</td>
+                <td>{{obj.religion}}</td>
+                <td>{{obj.caste_name}}</td>
+                <td><a href="{% url 'user_settings:edit_caste' pk=obj.id %}">Edit</a></td>
+                <td><a href="{% url 'user_settings:delete_caste' pk=obj.id %}">Delete</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    </div>
+</form>
 
 </body>
 </html>
