--- a/ESchoolOffice/templates/user_settings/Relation.html
+++ b/ESchoolOffice/templates/user_settings/Relation.html
@@ -3,63 +3,88 @@
 <html lang="">
 
 <head>
-<title>Relationship</title>
+<title>Relation</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body id="top">
-
-	<div class="container">
-  <h2>Relationship</h2>
+<form method="post">
+ {% csrf_token %}
+<div class="container">
+  <h2>Relation</h2>
 
   <div class="row">
    <div class="col-md-12">
+            <div class="card table-bordered">
 
-   	<div class="card table-bordered">
-                <div class="card-header">
-                    Relationship
+                    <div class="card-header">
+                    Create New Relation
                 </div>
                 <div class="card-body">
+
                     <div class="row card-body2">
 
-                    	<div class="col-md-1">
+                        <div class="col-md-1">
                         </div>
 
                         <div class="col-md-3 text-right">
-                            Relationship: 
+                           Relation Name:
                         </div>
-
                         <div class="col-md-6 bg-warning">
-                        ww
+                            {{ form.relation_name }}
                         </div>
-
                     </div>
 
-                     <div class="row btn-div">
+                    <div class="row">
                         <div class="col-md-4 card-body2">
                         </div>
                         <div class="col-md-4">
-                        
+
                         <button class="btn btn-primary btn-btn">
                             Reset
                         </button>
                         </div>
-                        
+
                         <div class="col-md-4">
-                        <button class="btn btn-success btn-btn btn-save" onclick="return confirm('Are you sure you want to save this Relationship');">
+                        <button class="btn btn-success btn-btn">
                             Save
                         </button>
                         </div>
 
+
                     </div>
-                 </div>
+
+
+
+                    </div>
+
+                </div>
+            </div>
     </div>
-
-   </div>
 </div>
-
+       <div class="container">
+    <div>
+        <table border="1">
+            <tr>
+                <th>Sl No</th>
+                <th>Relation Name</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+            {% for obj in data %}
+            <tr>
+                <td>{{forloop.counter}}</td>
+                <td>{{obj.relation_name}}</td>
+                <td><a href="{% url 'user_settings:edit_relation' pk=obj.id %}">Edit</a></td>
+                <td><a href="{% url 'user_settings:delete_relation' pk=obj.id %}">Delete</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    </div>
+</form>
 
 </body>
 </html>
