updated asset list with assets in assetinward- billno

--- a/ESchoolOffice/templates/asset/AssetDetails.html
+++ b/ESchoolOffice/templates/asset/AssetDetails.html
@@ -119,9 +119,9 @@
                             Asset List
                         </div>
                         <table border="1">
-                            {% for obj in data %}
+                            {% for obj in data1 %}
                             <tr>
-                                <td>{{forloop.counter}}</td>
+
                                 <td>{{obj.asset_name}}</td>
                             </tr>
                             {% endfor %}
