added index, update,create,delete and view templates for pta committee

--- a/ESchoolOffice/templates/pta/PTACommiteeRegistrationForm.html
+++ b/ESchoolOffice/templates/pta/PTACommiteeRegistrationForm.html
@@ -5,7 +5,7 @@
 
 
 <!--<div class ="test">Sample</div>-->
-<form action="reg_create" method="post">
+<form action="pta_reg_create" method="post">
     {% csrf_token %}
     <table class="table table-primary">
          {{ form.as_table }}
