--- a/ESchoolOffice/templates/pta/PTACommitteeDelete.html
+++ b/ESchoolOffice/templates/pta/PTACommitteeDelete.html
@@ -6,7 +6,7 @@
 <form method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ object }}"?</p>
     <input type="submit" value="Confirm">
-    <a href="/pta/reg/index">Cancel</a>
+    <a href="/pta/committee/index">Cancel</a>
 </form>
 
 {% endblock body_data %}
