--- a/ESchoolOffice/templates/pta/PTACommitteeForm.html
+++ b/ESchoolOffice/templates/pta/PTACommitteeForm.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'layout/base_template.html' %}
+{% block title %} Subjects {% endblock title %}
 
-</body>
-</html>
+{% block body_data %}
+
+
+<!--<div class ="test">Sample</div>-->
+<form action="pta_committee_create" method="post">
+    {% csrf_token %}
+    <table class="table table-primary">
+         {{ form.as_table }}
+    </table>
+    <input type="submit" value="Submit">
+</form>
+{% endblock body_data %}
