--- a/ESchoolOffice/templates/user_settings/Caste.html
+++ b/ESchoolOffice/templates/user_settings/Caste.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
+{% extends 'layout/base_template.html' %}
+{% block title %} Caste {% endblock title %}
 
-<html lang="">
-
-<head>
-<title>Caste</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body id="top">
+{% block body_data %}
 <form method="post">
  {% csrf_token %}
 <div class="container">
@@ -100,6 +92,4 @@
     </div>
     </div>
 </form>
-
-</body>
-</html>
+{% endblock body_data %}
